@@ -1,0 +1,11 @@
+package test.dependent.issue141;
+
+import org.testng.annotations.Test;
+
+public class BSample {
+  @Test
+  public void b() {}
+
+  @Test
+  public void bb() {}
+}
